--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
           <ul>  <!-- SLIDE  -->
             <li data-index="rs-411" data-transition="fadethroughtransparent" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="assets/img/blur1-100x50.jpg" data-rotate="0" data-fstransition="fade" data-fsmasterspeed="1000" data-fsslotamount="7" data-saveperformance="off" data-title="One" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
               <!-- MAIN IMAGE -->
-              <img src="rev/img/back3.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
+              <img src="rev/img/snowscene1.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
               <!-- LAYERS -->
               <div id="rrzt_411" class="rev_row_zone rev_row_zone_top" style="z-index: 9;">
 
@@ -774,7 +774,6 @@
                      data-width="none"
                      data-height="none"
                      data-whitespace="nowrap"
-
                      data-type="row"
                      data-columnbreak="2"
                      data-basealign="slide"
@@ -790,7 +789,6 @@
                      data-paddingright="[100,50,40,40]"
                      data-paddingbottom="[0,0,0,0]"
                      data-paddingleft="[100,50,40,40]"
-
                      style="z-index: 9; white-space: nowrap; font-size: 20px; line-height: 22px; font-weight: 400; color: rgba(255, 255, 255, 1.00);">
                   <!-- LAYER NR. 2 -->
                   <div class="tp-caption  "
@@ -815,8 +813,8 @@
                        data-paddingright="[0,0,0,0]"
                        data-paddingbottom="[0,0,0,0]"
                        data-paddingleft="[0,0,0,0]"
-
                        style="z-index: 10; width: 100%;">
+
                     <!-- LAYER NR. 3 -->
                     <div class="tp-caption   tp-resizeme  blurslider-gradient"
                          id="slide-411-layer-1"
@@ -827,11 +825,9 @@
                          data-width="none"
                          data-height="none"
                          data-whitespace="nowrap"
-
                          data-type="text"
                          data-basealign="slide"
                          data-responsive_offset="on"
-
                          data-frames='[{"delay":"+290","speed":2000,"frame":"0","from":"y:50px;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;fb:0;","ease":"Power3.easeInOut"}]'
                          data-margintop="[0,0,0,0]"
                          data-marginright="[0,0,0,0]"
@@ -842,8 +838,8 @@
                          data-paddingright="[0,0,40,40]"
                          data-paddingbottom="[0,0,0,0]"
                          data-paddingleft="[0,0,40,40]"
-
-                         style="z-index: 11; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">SPurno Animation
+                         style="z-index: 11; white-space: nowrap; font-size: 110px; line-height: 100px; font-weight: 400; color: rgba(255, 255, 255, 1.00); display: inline-block;font-family:Poppins;">
+                         SPurno Animation
                       <br/>
                       Studio
                     </div>
@@ -1006,7 +1002,7 @@
             <!-- SLIDE  -->
             <li data-index="rs-412" data-transition="fadethroughtransparent" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="assets/img/blurbg14-100x50.jpg" data-rotate="0" data-saveperformance="off" data-title="Two" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
               <!-- MAIN IMAGE -->
-              <img src="rev/img/snowscene1.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
+              <img src="rev/img/snowscene4.jpg" alt="Image description" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="6" class="rev-slidebg">
               <!-- LAYERS -->
               <div id="rrzt_412" class="rev_row_zone rev_row_zone_top" style="z-index: 5;">
 
@@ -1473,7 +1469,6 @@
                    data-width="none"
                    data-height="none"
                    data-whitespace="nowrap"
-
                    data-type="image"
                    data-basealign="slide"
                    data-responsive_offset="off"
@@ -1484,7 +1479,6 @@
                    data-paddingright="[0,0,0,0]"
                    data-paddingbottom="[0,0,0,0]"
                    data-paddingleft="[0,0,0,0]"
-
                    style="z-index: 13;">
                 <div class="rs-looped rs-slideloop" data-easing="Power2.easeInOut" data-speed="1" data-xs="0" data-xe="0" data-ys="-34" data-ye="0">
                   <img src="rev/assets/img/arrow2x.png" alt="Image description" data-ww="['13px','13px','13px','13px']" data-hh="['7px','7px','7px','7px']" width="26" height="14">
