--- a/index.html
+++ b/index.html
@@ -1793,12 +1793,12 @@
           jsFileLocation: "revolution/js/",
           sliderLayout: "fullscreen",
           dottedOverlay: "none",
-          delay: 9000,
+          delay: 4000,
           navigation: {
-            keyboardNavigation: "off",
+            keyboardNavigation: "on",
             keyboard_direction: "vertical",
             mouseScrollNavigation: "on",
-            mouseScrollReverse: "default",
+            mouseScrollReverse: "on",
             onHoverStop: "off",
             touch: {
               touchenabled: "on",
