--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -883,7 +883,7 @@
                       <div class="g-flex-middle-item g-z-index-1">
                         <span class="d-inline-block g-brd-bottom g-brd-2 g-brd-primary g-font-weight-700 g-font-size-16 g-letter-spacing-1 g-pb-8 g-mb-20">Examples of branding projects</span>
                         <h3 class="h2 g-font-weight-700 g-letter-spacing-3 g-mb-35">Branding work</h3>
-                        <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Learn More</a>
+                        <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Shop Now</a>
                       </div>
                     </article>
                     <!-- End Article -->
@@ -902,7 +902,7 @@
                         <div class="g-line-height-2 g-mb-35">
                           <p class="g-color-white-opacity-0_9">This is where we sit down, grab a cup of coffee and dial in the details. Understanding the task at hand and ironing out the wrinkles is key.</p>
                         </div>
-                        <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Learn More</a>
+                        <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Shop Now</a>
                       </div>
                     </article>
                     <!-- End Article -->
