--- a/animated-background-stock-video-footage-for-premium-download.html
+++ b/animated-background-stock-video-footage-for-premium-download.html
@@ -52,6 +52,7 @@
     <link rel="stylesheet" href="blog/assets/vendor/fancybox/jquery.fancybox.css">
 
     <link rel="stylesheet" href="assets/css/styles.bm-classic.css">
+    <link rel="stylesheet" href="assets2/css/spurno.css">
 
     <!-- CSS Customization -->
     <link rel="stylesheet" href="blog/assets/css/custom.css">
@@ -841,26 +842,28 @@
                 </header>
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
-                  <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download.jpg" alt="SPurno Animation Studio">
-                  </figure>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <div class="watermark">SPurno Animation Studio</div>
+                    <video preload="auto" controls controls="controls" poster="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-5.jpg" __idm_id__="8193">
+                      <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/webm;">
+                        <source src="videos/animated-background-stock-video-for-premium-download-5.mp4" type="video/mp4;">
+                    </video>
+                  </div>
 
                   <p>Lets' jump into the details about Background Animation for your videos</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">What is Video Background Animation?</h3>
-                  </div>
+                  <h5>What is Video Background Animation?</h5>  
 
                   <p>Video background animation refers to the use of video content as a moving background on a website. Unlike static images or simple color backgrounds, video backgrounds can include anything from abstract animations and nature scenes to product showcases and brand stories. These animations add depth and interest to a webpage, creating an immersive experience for users.</p>
 
                   <p>Find & Download Free Graphic Resources for Animation Background. 849000+ Vectors, Stock Photos & PSD files. ✓ Free for commercial use ✓ High Quality Images.</p>
 
-                  <figure class="text-center text-md-left float-md-left g-pr-30--sm g-py-20 mb-0">
-                    <img class="u-shadow-v25 img-fluid g-width-300" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="Animated Background Stock Video">
-                    <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>Background Animation</em>
-                    </figcaption>
-                  </figure>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <div class="watermark">SPurno Animation Studio</div>
+                    <video preload="auto" controls controls="controls" poster="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-7.jpg" __idm_id__="8193">
+                      <source src="videos/animated-background-stock-video-for-premium-download-6.mp4" type="video/webm;">
+                        <source src="videos/animated-background-stock-video-for-premium-download-6.mp4" type="video/mp4;">
+                    </video>
+                  </div>
 
                   <p>A well-crafted video background can communicate your brand’s message effectively within seconds. Whether it’s showcasing a product in action or telling a story, video backgrounds can deliver complex information quickly and engagingly.</p>
 
@@ -868,7 +871,7 @@
 
                   <p>Large video files can slow down your website, leading to poor user experience and lower SEO rankings. Optimize your videos by compressing file sizes, using efficient video formats (like MP4), and enabling lazy loading to improve load times.</p><br>
 
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">VISIT AANIMATION STUDIO</h3>
+                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">VISIT ANIMATION STUDIO</h3>
 
                   <p>Your video background animation should look great on all devices, from desktops to smartphones. Use responsive design techniques to ensure that your video adjusts correctly across different screen sizes without compromising quality.</p>
                     <!-- Banners -->
@@ -2397,6 +2400,13 @@
           gtag('js', new Date());
   
           gtag('config', 'G-J6N56GN0M0');
+        </script>
+        <script>
+          document.addEventListener('contextmenu', function (event) {
+              if (event.target.tagName === 'VIDEO') {
+                  event.preventDefault();
+              }
+          });
         </script>
   </body>
 </html>
