--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -22,6 +22,7 @@
     <meta property="og:image:width" content="470" />
     <meta property="og:image:height" content="246" />
     <meta property="og:site_name" content="" />
+
     <meta property="og:description" content="Modern 3d business infographics vector design template. Can be used for workflow processes, flow chart, banner, number options, presentation, layout
     Browse 31029 incredible 3d Infographic vectors, icons, clipart graphics, and backgrounds for royalty-free download from the creative contributors
     Browse 31029 incredible 3d Infographic vectors, icons, clipart graphics, and backgrounds for royalty-free download from the creative contributors
@@ -849,9 +850,12 @@
                 </header>
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
-                  <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="images/3d-infographic-hexagon-animated-screen.jpg" alt="SPurno Animation Studio">
-                  </figure>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <video preload="auto" controls controls="controls" poster="images/infographics-template-thumb.jpg" __idm_id__="8193">
+                      <source src="videos/3d-infographic-video-template.mp4" type="video/webm;">
+                        <source src="videos/3d-infographic-video-template2.mp4" type="video/mp4;">
+                    </video>
+                  </div>
 
                   <p>Find & Download the most popular 3d Infographic videos on AdobeStock ✓ Premium for commercial use ✓ High Quality Animated Videos ✓ Made for Creative Projects</p>
                   <P>Over up all your presentations by adding a third dimension! Right, slides are flat, but our infographics have a 3D effect that will amaze your audience. Pie charts, blocks, bars, pyramids and all kinds of diagrams look better if there’s some perspective added to them. Customize them with your data and convey your points in a visual way.</P>
@@ -916,12 +920,12 @@
 
                   <p>Use tools like Adobe Illustrator or Blender to create detailed and realistic graphics. Make sure to maintain a balance between text and visuals, ensuring that your infographic is not cluttered. Choose contrasting colors to make different sections stand out and add depth with shadows and gradients. Finally, ensure your 3D infographics are responsive so they look great on all devices, enhancing user engagement</p>
 
-                  <figure class="text-center text-md-left float-md-left g-pr-30--sm g-py-20 mb-0">
-                    <img class="u-shadow-v25 img-fluid g-width-300" src="images/infographics-spurno-animation-studio.jpg" alt="SPurno Animation Studio">
-                    <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em></em>
-                    </figcaption>
-                  </figure>
+                  <div class="embed-responsive embed-responsive-16by9 g-mb-60">
+                    <video preload="auto" controls controls="controls" poster="images/infographics-template-thumb2.jpg" __idm_id__="8193">
+                      <source src="videos/3d-infographic-video-template2.mp4" type="video/webm;">
+                        <source src="videos/3d-infographic-video-template2.mp4" type="video/mp4;">
+                    </video>
+                  </div>
 
                   <p>Software like Adobe Illustrator, Blender, and Cinema 4D can be used to create stunning 3D infographics. These tools offer a range of features to design intricate 3D models and integrate them into your infographic.</p>
 
@@ -2363,6 +2367,13 @@
         gtag('js', new Date());
 
         gtag('config', 'G-J6N56GN0M0');
+      </script>
+      <script>
+        document.addEventListener('contextmenu', function (event) {
+            if (event.target.tagName === 'VIDEO') {
+                event.preventDefault();
+            }
+        });
       </script>
   </body>
 </html>
