--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -848,7 +848,18 @@
                     </li>
                   </ul>
                 </header>
-
+                <h3>3D Infographic: Revolutionizing Media and Web Media</h3>
+                <p>In an era dominated by digital content, the ways in which information is conveyed have evolved significantly. Among the most innovative tools in communication is the **3D infographic**, a powerful method of visualization that brings data to life in a dynamic and immersive way. From media to web media, 3D infographics have emerged as essential assets for conveying complex information with clarity, creativity, and engagement. </p>
+                <br>
+                <h3>What is a 3D Infographic?</h3>
+                <p>A 3D infographic is a visual representation of data, concepts, or processes using three-dimensional models. Unlike traditional 2D graphics, 3D infographics add depth, perspective, and often interactivity, allowing viewers to better understand intricate details. These visuals can range from simple 3D bar charts to intricate models of products, architectural layouts, or scientific concepts.</p>
+                <br>
+                <h3>Key Features:</h3>
+                <br>
+                <p>Depth and Perspective: Adds a sense of realism and makes the content more engaging.</p>
+                <p>Interactivity: Some 3D infographics allow users to interact with the model, rotate views, zoom in on details, or explore information in layers.</p>
+                <p>Realistic Representations: Especially useful for conveying real-world objects, phenomena, or scenarios, such as product designs, geographical landscapes, or medical structures.</p>
+                
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
                   <div class="embed-responsive embed-responsive-16by9 g-mb-60">
                     <video preload="auto" controls controls="controls" poster="images/infographics-template-thumb.jpg" __idm_id__="8193">
@@ -856,7 +867,7 @@
                         <source src="videos/3d-infographic-video-template2.mp4" type="video/mp4;">
                     </video>
                   </div>
-
+                  
                   <p>Find & Download the most popular 3d Infographic videos on AdobeStock ✓ Premium for commercial use ✓ High Quality Animated Videos ✓ Made for Creative Projects</p>
                   <P>Over up all your presentations by adding a third dimension! Right, slides are flat, but our infographics have a 3D effect that will amaze your audience. Pie charts, blocks, bars, pyramids and all kinds of diagrams look better if there’s some perspective added to them. Customize them with your data and convey your points in a visual way.</P>
 
