--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -867,7 +867,10 @@
                         <source src="videos/3d-infographic-video-template2.mp4" type="video/mp4;">
                     </video>
                   </div>
-                  
+                  <a href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation" class="btn u-btn-primary g-mr-10 g-mb-15">
+                    <i class="icon-communication-141 u-line-icon-pro"></i>
+                      Buy Now
+                  </a>
                   <p>Find & Download the most popular 3d Infographic videos on AdobeStock ✓ Premium for commercial use ✓ High Quality Animated Videos ✓ Made for Creative Projects</p>
                   <P>Over up all your presentations by adding a third dimension! Right, slides are flat, but our infographics have a 3D effect that will amaze your audience. Pie charts, blocks, bars, pyramids and all kinds of diagrams look better if there’s some perspective added to them. Customize them with your data and convey your points in a visual way.</P>
 
@@ -1971,7 +1974,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -1991,7 +1994,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2011,7 +2014,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2031,7 +2034,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
