--- a/adobe-after-effect-animation-tutorial.html
+++ b/adobe-after-effect-animation-tutorial.html
@@ -2076,7 +2076,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2096,7 +2096,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2116,7 +2116,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2136,7 +2136,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
