--- a/about-us.html
+++ b/about-us.html
@@ -2050,7 +2050,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2070,7 +2070,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2090,7 +2090,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2110,7 +2110,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
