--- a/animated-background-stock-video-footage-for-premium-download.html
+++ b/animated-background-stock-video-footage-for-premium-download.html
@@ -1993,7 +1993,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2013,7 +2013,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2033,7 +2033,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2053,7 +2053,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
