--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -1946,7 +1946,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -1966,7 +1966,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -1986,7 +1986,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2006,7 +2006,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
