--- a/infographic-video.html
+++ b/infographic-video.html
@@ -1954,7 +1954,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -1974,7 +1974,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -1994,7 +1994,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
@@ -2014,7 +2014,7 @@
                           <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
                             <span class="d-block h6 g-color-white">2024</span>
                           </div>
-                          <a class="u-link-v2" href="bm-classic-single-2.html"></a>
+                          <a class="u-link-v2" href="#"></a>
                         </figcaption>
                       </figure>
                       <!-- End Magazines -->
