--- a/infographic.html
+++ b/infographic.html
@@ -158,7 +158,9 @@
                               <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital Wallpaper</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a></li>
-                          </ul>
+                              <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                                <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
+                            </ul>
                         </div>
                         <div class="col-lg-5">
                           <article class="media g-mb-20">
