--- a/sale-banner.html
+++ b/sale-banner.html
@@ -150,7 +150,9 @@
                               <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital Wallpaper</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a></li>
-                          </ul>
+                              <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                                <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
+                            </ul>
                         </div>
                         <div class="col-lg-5">
                           <article class="media g-mb-20">
@@ -792,7 +794,7 @@
             <div class="col-lg-9 g-mb-50 g-mb-0--lg">
               <article class="g-mb-60">
                 <header class="g-mb-30">
-                  <h2 class="h1 g-mb-15">3d Infographic | SPurno Animation Studio</h2>
+                  <h2 class="h1 g-mb-15">Sale Banner | SPurno Animation Studio</h2>
 
                   <ul class="list-inline d-sm-flex g-color-gray-dark-v4 mb-0">
                     <li class="list-inline-item">
