--- a/background-animation.html
+++ b/background-animation.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Animated Background Stock Video Footage for Premium Download | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
+    <title>Background Animation Stock Video Footage for Premium Download | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description"  content="Animated Background Stock Video Footage for Premium Download | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock" />
+    <meta name="description"  content="Background Animation Stock Video Footage for Premium Download | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock" />
     <meta name="author" content="SPurno Animation Studio">
     <meta name="keywords"  content="animation background, digital wallpaper, motion background, business presentation, business presentation templates, business powerpoint templates,moving backgrounds, startup pitch deck, live wallpapersfree motion backgrounds,free motion backgrounds for worship,pitch deck services,pitch deck design agency,business plan presentation,pitch deck companies,church motion graphics free,business plan ppt,free animated backgrounds,lively wallpaper download,best powerpoint templates for business,creating a pitch deck,startup pitch deck examples,motion backgrounds for church free,pitch deck design company,worship background,business pitch deck,live wallpaper download,investment pitch deck,business plan powerpoint,motion loops,powerpoint design company,live wallpaper, 4kfree moving backgrounds,business pitch" />
     <meta property="og:title" content="Corporate Animation Artist" />
@@ -18,7 +18,7 @@
     <meta property="og:image:width" content="470" />
     <meta property="og:image:height" content="246" />
     <meta property="og:site_name" content="" />
-    <meta property="og:description" content="Animated Background Stock Video Footage for Premium Download | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock"/>
+    <meta property="og:description" content="Background Animation Stock Video Footage for Premium Download | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock"/>
     <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="https://twitter.com/iSpurno" />
     <meta name="twitter:domain" content="http://spurno.github.io" />
@@ -140,7 +140,7 @@
                         <div class="col-lg-2">
                           <ul class="list-unstyled mb-0">
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                                                            <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
+                              <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="presentation-slides.html">Presentation Slides</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
@@ -764,7 +764,7 @@
         <div class="container">
           <div class="d-sm-flex text-center">
             <div class="align-self-center">
-              <h2 class="h3 g-mb-10 g-mb-0--md">Animated Background Stock Video Footage for Premium Download</h2>
+              <h2 class="h3 g-mb-10 g-mb-0--md">Background Animation Stock Video Footage for Premium Download</h2>
             </div>
 
             <div class="align-self-center ml-auto">
@@ -778,7 +778,7 @@
                   <i class="g-color-gray-light-v2 g-ml-5">/</i>
                 </li>
                 <li class="list-inline-item g-color-primary">
-                  <span>Animated Background Stock Video Footage for Premium Download</span>
+                  <span>Background Animation Stock Video Footage for Premium Download</span>
                 </li>
               </ul>
             </div>
@@ -795,7 +795,7 @@
             <div class="col-lg-9 g-mb-50 g-mb-0--lg">
               <article class="g-mb-60">
                 <header class="g-mb-30">
-                  <h2 class="h1 g-mb-15">Animated Background Stock Video Footage for Premium Download</h2>
+                  <h2 class="h1 g-mb-15">Background Animation Stock Video Footage for Premium Download</h2>
 
                   <ul class="list-inline d-sm-flex g-color-gray-dark-v4 mb-0">
                     <li class="list-inline-item">
@@ -975,14 +975,6 @@
                       </h4>
                     </li>
                   </ul>
-
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu.</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">Finding ways to help tell your story through video is a powerful tool.</h3>
-                  </div>
-
-                  <p>Mauris et porttitor diam. In semper volutpat mauris, ac fermentum orci commodo vitae. Curabitur ut feugiat tellus. Quisque consequat pharetra massa ultricies auctor. Sed mollis vulputate sapien eget tincidunt. Curabitur tempus lacus a sapien rutrum, feugiat blandit nunc tincidunt. Donec nec ornare tellus. In neque ipsum, auctor eu bibendum cursus, fringilla sed magna. Vestibulum lobortis libero et lectus congue efficitur. Suspendisse varius varius finibus. Maecenas luctus convallis euismod. Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim.</p>
                 </div>
 
                 <!-- Sources & Tags -->
