some_links_updated

--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -291,11 +291,11 @@
                             <figure class="g-pos-rel">
                               <img class="img-fluid w-100 g-mb-20" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio">
                             </figure>
-                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Motion background Animation</a>
+                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="motion-graphics.html">Motion background Animation</a>
                             </h3>
                             <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                               <li class="list-inline-item">
-                                <a class="g-color-gray-dark-v4 g-text-underline--none--hover" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Digital Wallpaper</a>
+                                <a class="g-color-gray-dark-v4 g-text-underline--none--hover" href="digital-wallpaper.html">Digital Wallpaper</a>
                               </li>
                               <li class="list-inline-item">/</li>
                               <li class="list-inline-item">Jan 20, 2024</li>
@@ -629,7 +629,7 @@
                             </h3>
                             <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                               <li class="list-inline-item">
-                                <a class="g-color-gray-dark-v4 g-text-underline--none--hover" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Digital Wallpaper</a>
+                                <a class="g-color-gray-dark-v4 g-text-underline--none--hover" href="digital-wallpaper.html">Digital Wallpaper</a>
                               </li>
                               <li class="list-inline-item">/</li>
                               <li class="list-inline-item">Jan 20, 2024</li>
