--- a/animated-background-stock-video-footage-for-premium-download.html
+++ b/animated-background-stock-video-footage-for-premium-download.html
@@ -140,7 +140,7 @@
                         <div class="col-lg-2">
                           <ul class="list-unstyled mb-0">
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                                                            <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
+                              <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="presentation-slides.html">Presentation Slides</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
@@ -151,9 +151,11 @@
                               <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital Wallpaper</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a></li>
-                              <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                                <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
-                            </ul>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="typography.html">Typography Animation</a></li>
+                          </ul>
                         </div>
                         <div class="col-lg-5">
                           <article class="media g-mb-20">
@@ -617,7 +619,7 @@
                             <figure class="g-pos-rel">
                               <img class="img-fluid w-100 g-mb-20" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio">
                             </figure>
-                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Presentation Slide Template</a>
+                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="presentation-slides.html">Presentation Slide Template</a>
                             </h3>
                             <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                               <li class="list-inline-item">
