--- a/background-animation.html
+++ b/background-animation.html
@@ -617,7 +617,7 @@
                             <figure class="g-pos-rel">
                               <img class="img-fluid w-100 g-mb-20" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio">
                             </figure>
-                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Presentation Slide Template</a>
+                            <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="presentation-slides.html">Presentation Slide Template</a>
                             </h3>
                             <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                               <li class="list-inline-item">
