--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="col-lg-2">
                           <ul class="list-unstyled mb-0">
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                                                            <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
+                              <a class="g-color-main g-color-main--hover" href="background-animation.html">Background Animation</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="presentation-slides.html">Presentation Slides</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
@@ -150,9 +150,11 @@
                               <a class="g-color-main g-color-main--hover" href="digital-wallpaper.html">Digital Wallpaper</a></li>
                             <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
                               <a class="g-color-main g-color-main--hover" href="motion-graphics.html">Motion Graphics</a></li>
-                              <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
-                                <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
-                            </ul>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="sale-banner.html">Sale Banner</a></li>
+                            <li class="g-brd-bottom g-brd-gray-light-v4 g-py-10">
+                              <a class="g-color-main g-color-main--hover" href="typography.html">Typography Animation</a></li>
+                          </ul>
                         </div>
                         <div class="col-lg-5">
                           <article class="media g-mb-20">
