--- a/presentation-slides.html
+++ b/presentation-slides.html
@@ -893,7 +893,7 @@
                 <!-- Sources & Tags -->
                 <div class="g-mb-30">
                   <h6 class="g-color-gray-dark-v1 g-mb-15">
-                    <strong class="g-mr-5">Source:</strong> <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">The Next Web (TNW)</a>
+                    <strong class="g-mr-5">Source:</strong> <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="https://spurno.github.io">SPurno Animation Studio</a>
                   </h6>
                   <h6 class="g-color-gray-dark-v1">
                     <strong class="g-mr-5">Tags:</strong>
